# anycloud

./: .gitbook.yml  Cargo.toml  README.md  build.rs
.github/workflows/: release.yml  tests.yml
Formula/: anycloud.rb
alan/: anycloud.ln
cli/: Cargo.toml  README.md  build.rs
cli/alan/: .gitignore  anycloud.agz  anycloud.ln
cli/src/: lib.rs  main.rs
cli/src/deploy/: deploy.rs  mod.rs
cli/src/http/: mod.rs
cli/src/logger/: elasticsearch.rs  logzio.rs  mod.rs  sematext.rs  simple.rs
cli/src/oauth/: mod.rs
docs/: README.md  SUMMARY.md  about-docs.md  about.md  anycloud-json.md  background-information.md  cli-installation.md  cli.md  credentials.md  host-node-aws.md  start.md  summary.md  tutorial.md
docs/background/: architecture.md  autoscaling.md
docs/background-information/: README.md  architecture.md  autoscaling.md
docs/how-to/: azure.md  custom-app.md  custom-name.md  env.md  gcp.md  multi.md
docs/how-to-guides/: README.md  azure.md  deploy-an-app-to-multiple-cloud-providers.md  env.md  gcp.md  multi.md  set-environment-variables.md
docs/reference/: anycloud-json.md  cli-api.md  credentials.md  project-structure.md  structure.md
docs/reference-1/: anycloud-json.md  credentials-1.md
docs/reference-1/project-structure/: README.md  anycloud-json.md  dockerfile.md
docs/reference/structure/: README.md  anycloud-json.md  dockerfile.md  git.md
docs/technical-reference/: cli-api.md
docs/tutorials/: host-a-node.js-server-on-your-aws-account.md  host-node-aws.md
node/: get-anycloud.js  package.json
src/: lib.rs  main.rs
